--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "for city_pop in cities:\n",
     "    i += 1\n",
     "    x = str(f'{i}. {city_pop}')\n",
-    "    city_pop['Population']\n",
+    "    city_pop['Population'].append(x)\n",
     "city_populations"
    ]
   },
