--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -289,16 +289,16 @@
        "[]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "city_populations = []\n",
-    "i = 0\n",
+    "inc = 0\n",
     "for city_pop in cities:\n",
-    "    i += 1\n",
+    "    inc += 1\n",
     "    x = str(f'{i}. {city_pop}')\n",
     "    city_pop['Population']\n",
     "city_populations"
