Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "for city_pop in cities:\n",
     "    inc += 1\n",
     "    x = str(f'{i}. {city_pop}')\n",
-    "    city_pop.\n",
+    "    city_pop.values('')\n",
     "city_populations"
    ]
   },
