Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
     "for city_pop in cities:\n",
     "    inc += 1\n",
     "    x = str(f'{i}. {city_pop}')\n",
-    "    city_pop['Population'].values(x)\n",
+    "    city_pop['Population']\n",
     "city_populations"
    ]
   },
