Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,11 +298,7 @@
    "source": [
     "city_populations = []\n",
     "inc = 0\n",
-    "for city_pop in cities:\n",
-    "    inc += 1\n",
-    "    x = str(f'{i}. {city_pop}')\n",
-    "    city_pop['Population']\n",
-    "city_populations"
+    "for city_pop in cities:\n"
    ]
   },
   {
