Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "city_populations = []\n",
     "inc = 0\n",
-    "for city_pop in :\n"
+    "for city_pop in list:\n"
    ]
   },
   {
