Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "city_populations = []\n",
     "inc = 0\n",
-    "for city_pop in list(0, r):\n"
+    "for city_pop in list(0, range()):\n"
    ]
   },
   {
