Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,8 @@
    "source": [
     "city_populations = []\n",
     "inc = 0\n",
-    "for city_pop in list(range(0, len(cities['']))):\n"
+    "for city_pop in list(range(0, len(cities['Population']))):\n",
+    "    \n"
    ]
   },
   {
