Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,6 +299,7 @@
     "city_populations = []\n",
     "inc = 0\n",
     "for city_pop in list(range(0, len(cities['Population']))):\n",
+    "    inc += 1\n",
     "    \n"
    ]
   },
