Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "inc = 0\n",
     "for city_pop in list(range(0, len(cities['Population']))):\n",
     "    inc += 1\n",
-    "    \n"
+    "    x = str(f)\n"
    ]
   },
   {
