Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,8 @@
     "for city_pop in list(range(0, len(cities['Population']))):\n",
     "    inc += 1\n",
     "    x = str(f'{inc}. {city_pop}')\n",
-    "    \n",
+    "    city_populations.append(x\n",
+    "                           )\n",
     "    \n"
    ]
   },
