Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,9 @@
    ],
    "source": [
     "city_populations = []\n",
-    "inc = 0\n"
+    "inc = 0\n",
+    "for city_pop in list(range(0, len(cities['Population']))):\n",
+    "    inc"
    ]
   },
   {
