Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,8 @@
     "city_populations = []\n",
     "inc = 0\n",
     "for city_pop in list(range(0, len(cities['Population']))):\n",
-    "    inc += 1"
+    "    inc += 1\n",
+    "    x = str(f'{inc}. {city_pop}')"
    ]
   },
   {
