Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,9 +298,10 @@
    "source": [
     "city_populations = []\n",
     "inc = 0\n",
-    "for city_pop in list(range(0, len(cities['Population']))):\n",
+    "for city_pop in cities:\n",
     "    inc += 1\n",
     "    x = inc+', '+city_pop\n",
+    "    \n",
     "    \n",
     "    "
    ]
