Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "inc = 0\n",
     "for city_pop in cities:\n",
     "    inc += 1\n",
-    "    x = inc+', '+city_pop\n",
+    "    x = str(f'{inc}. {city_pop}')\n",
     "    \n",
     "    \n",
     "    "
