Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "city_populations = []\n",
     "inc = 0\n",
-    "for city_pop in cities:\n",
+    "for city_pop in cities[]:\n",
     "    inc += 1\n",
     "    x = str(f'{inc}. {city_pop}')\n",
     "    \n",
