--- a/index.ipynb
+++ b/index.ipynb
@@ -298,10 +298,10 @@
    "source": [
     "city_populations = []\n",
     "inc = 0\n",
-    "for city_pop in cities[]:\n",
+    "for city_pop in cities[3]:\n",
     "    inc += 1\n",
     "    x = str(f'{inc}. {city_pop}')\n",
-    "    \n",
+    "    city_pop\n",
     "    \n",
     "    "
    ]
