Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,8 +301,8 @@
     "for city_pop in cities[3]:\n",
     "    inc += 1\n",
     "    x = str(f'{inc}. {city_pop}')\n",
-    "    city_pop.append(x)\n",
-    "city\n",
+    "    city_population.append(x)\n",
+    "city_popul\n",
     "    \n",
     "    "
    ]
