Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,7 @@
     "    inc += 1\n",
     "    x = str(f'{inc}. {city_pop}')\n",
     "    city_population.append(x)\n",
-    "city_popul\n",
+    "city_population\n",
     "    \n",
     "    "
    ]
