--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "source": [
     "city_populations = []\n",
     "inc = 0\n",
-    "for city_pop in cities[3]:\n",
+    "for city_pop in cities[3][\"Po\"]:\n",
     "    inc += 1\n",
     "    x = str(f'{inc}. {city_pop}')\n",
     "    city_populations.append(x)\n",
