Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,9 +298,9 @@
    "source": [
     "city_populations = []\n",
     "inc = 0\n",
-    "for city_pop in city_indices[3]:\n",
+    "for city_pop in cities:\n",
     "    inc += 1\n",
-    "    x = \n",
+    "    x = cities[]\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
