--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "inc = 0\n",
     "for city_pop in cities:\n",
     "    inc += 1\n",
-    "    x = cities[]\n",
+    "    x = cities[2]['Pop']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
