Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,11 +358,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "populations",
+         "text": [
+          "1, Buenos Aires",
+          "2, Toronto",
+          "3, Pyeongchang",
+          "4, Marakesh",
+          "5, Albuquerque",
+          "6, Los Cabos",
+          "7, Greenville",
+          "8, Archipelago Sea",
+          "9, Walla Walla Valley",
+          "10, Salina Island",
+          "11, Solta",
+          "12, Iguazu Falls"
+         ],
+         "type": "bar",
+         "uid": "249c8596-2bd0-11e9-b69c-f5af20bb571b",
+         "x": [
+          "1, Buenos Aires",
+          "2, Toronto",
+          "3, Pyeongchang",
+          "4, Marakesh",
+          "5, Albuquerque",
+          "6, Los Cabos",
+          "7, Greenville",
+          "8, Archipelago Sea",
+          "9, Walla Walla Valley",
+          "10, Salina Island",
+          "11, Solta",
+          "12, Iguazu Falls"
+         ],
+         "y": [
+          2581000,
+          2581000,
+          2581000,
+          2581000,
+          2581000,
+          2581000,
+          2581000,
+          2581000,
+          2581000,
+          2581000,
+          2581000,
+          2581000
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"dd43e54b-6fdb-42a1-9110-4d373fc8b3b1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"dd43e54b-6fdb-42a1-9110-4d373fc8b3b1\", [{\"name\": \"populations\", \"text\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"x\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"y\": [2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000], \"type\": \"bar\", \"uid\": \"24a11fa2-2bd0-11e9-b69c-f5af20bb571b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"dd43e54b-6fdb-42a1-9110-4d373fc8b3b1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"dd43e54b-6fdb-42a1-9110-4d373fc8b3b1\", [{\"name\": \"populations\", \"text\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"x\": [\"1, Buenos Aires\", \"2, Toronto\", \"3, Pyeongchang\", \"4, Marakesh\", \"5, Albuquerque\", \"6, Los Cabos\", \"7, Greenville\", \"8, Archipelago Sea\", \"9, Walla Walla Valley\", \"10, Salina Island\", \"11, Solta\", \"12, Iguazu Falls\"], \"y\": [2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000, 2581000], \"type\": \"bar\", \"uid\": \"24a11fa2-2bd0-11e9-b69c-f5af20bb571b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
