--- a/index.ipynb
+++ b/index.ipynb
@@ -307,6 +307,7 @@
    ],
    "source": [
     "city_populations = []\n",
+    "index \n",
     "for city_pop in cities:\n",
     "    x = cities[2]['Population']\n",
     "    city_populations.append(x)\n",
