Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,9 +307,10 @@
    ],
    "source": [
     "city_populations = []\n",
-    "index \n",
+    "index = 0\n",
     "for city_pop in cities:\n",
-    "    x = cities[2]['Population']\n",
+    "    \n",
+    "    x = cities[index]['Population']\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
