Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,19 +280,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "slice indices must be integers or None or have an __index__ method",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-53-5e5739dd4af2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcity_pop\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mindex\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Population'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mcity_populations\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mcity_populations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: slice indices must be integers or None or have an __index__ method"
-     ]
+     "data": {
+      "text/plain": [
+       "[[{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}],\n",
+       " [{'City': 'Buenos Aires',\n",
+       "   'Country': 'Argentina',\n",
+       "   'Population': 2891000,\n",
+       "   'Area': 4758},\n",
+       "  {'City': 'Pyeongchang',\n",
+       "   'Country': 'South Korea',\n",
+       "   'Population': 2581000,\n",
+       "   'Area': 3194},\n",
+       "  {'City': 'Albuquerque',\n",
+       "   'Country': 'New Mexico',\n",
+       "   'Population': 559277,\n",
+       "   'Area': 491},\n",
+       "  {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       "  {'City': 'Walla Walla Valley',\n",
+       "   'Country': 'USA',\n",
+       "   'Population': 32237,\n",
+       "   'Area': 33},\n",
+       "  {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}]]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -300,7 +514,7 @@
     "index = 0\n",
     "for city_pop in cities:\n",
     "    index += 1\n",
-    "    x = cities[0:12: 'Population'] \n",
+    "    x = cities[0:12: 2] \n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
