Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "index = 0\n",
+    "index = [0,]\n",
     "for city_pop in list(range(index ,len(cities))):\n",
     "    index += 1\n",
     "    x = cities[0]['Population']\n",
