Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "index = \n",
+    "index = 0\n",
     "for city_pop in list(range(index ,len(cities))):\n",
     "    index += 1\n",
     "    x = cities[0]['Population']\n",
