Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,27 +280,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000,\n",
-       " 2891000]"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "f-string: unterminated string (<ipython-input-76-44a3378c3429>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-76-44a3378c3429>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    x = str(f'{cities[0][\"Population]}')\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m f-string: unterminated string\n"
+     ]
     }
    ],
    "source": [
@@ -308,7 +297,7 @@
     "index = 0\n",
     "for city_pop in list(range(index ,len(cities))):\n",
     "    index +=1\n",
-    "    x = str(f'{cities[0][\"Populat]}')\n",
+    "    x = str(f'{cities[0][\"Population]}')\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
     "    "
