Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,27 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['2891001',\n",
-       " '2891002',\n",
-       " '2891003',\n",
-       " '2891004',\n",
-       " '2891005',\n",
-       " '2891006',\n",
-       " '2891007',\n",
-       " '2891008',\n",
-       " '2891009',\n",
-       " '2891010',\n",
-       " '2891011',\n",
-       " '2891012']"
+       "['2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000',\n",
+       " '2891000']"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
     "index = 0\n",
     "for city_pop in list(range(index + index ,len(cities))):\n",
     "    index +=1\n",
-    "    population = indexcities[0]['Population']\n",
+    "    population = cities[0]['Population']\n",
     "    x = str(f'{population}')\n",
     "    city_populations.append(x)\n",
     "city_populations\n",
