Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
    "source": [
     "city_populations = []\n",
     "index = 0\n",
-    "for city_pop in list(range(index + index ,len(cities[0]))):\n",
+    "for city_pop in list(range(index ,len(cities[0]['Popu']))):\n",
     "    index +=1\n",
     "    population = cities\n",
     "    x = str(f'{population}')\n",
